# respackDev

./: .gitignore  CMakeLists.txt  README.md
GPL/: LICENSE.txt
config/: gcc.cmake  intel.cmake  sekirei.cmake
man/: Al-21x21x21-frmsf.eps  Energy-Window.Al.eps  Thumbs.db  UvsE-cRPA-La2CuO4.eps  dat.wan-realspace-Si.eps  eels-Al.eps  epsq0-cRPA-La2CuO4.eps  respack.eps
man/en/: JvsE-Al.eps  TiO2-local.eps  UvsE-Al.eps  UvsE-cRPA-La2CuO4.eps  UvsE-fRPA-La2CuO4.eps  WvsR-Al.eps  WvsR-La2CuO4.eps  band-vs-th.eps  dat.WvsR.La2CuO4.eps  dat.dos-Al.eps  dat.iband-Al.eps  dat.iband-La2CuO4.eps  dat.iband.Al.eps  dat.pdos-Al.eps  dat.wan-realspace-Al.eps  dat.wan-realspace-La2CuO4.eps  dat.wan-realspace-Si.eps  dat.wan-realspace-TiO2.eps  dos-vs-th.eps  eels-Al.eps  eels-cRPA-La2CuO4.eps  eels-fRPA-La2CuO4.eps  epsq0-Al.eps  epsq0-cRPA-La2CuO4.eps  epsq0-fRPA-La2CuO4.eps  main-red.tex  main.tex  manual.tex  optical_conductivity-Al.eps  pwn_vs_aewn_V.eps  q-community.eps  reflectivity-Al.eps  respack.eps
sample/quantum-espresso/: Readme.txt
sample/quantum-espresso/Al.fcc.6x6x6/: Al.band.in  Al.bands.in  Al.scf.in  input.in
sample/quantum-espresso/La2CuO4.bct.6x6x6/: La2CuO4.band.in  La2CuO4.bands.in  La2CuO4.scf.in
sample/quantum-espresso/SO/BiTeI_7x7x7_nosym_SO/: Bi.UPF  BiTeI.scf.in  I.UPF  Te.UPF  input.in
sample/quantum-espresso/SO/BiTeI_7x7x7_sym_SO/: BiTeI.band.in  BiTeI.bands.in  BiTeI.scf.in
sample/quantum-espresso/SO/GaAs_7x7x7_nosym_SO/: GaAs.scf.in  input.in  run_GaAs.sh
sample/quantum-espresso/SO/GaAs_7x7x7_sym_SO/: GaAs.band.in  GaAs.bands.in  GaAs.scf.in
sample/quantum-espresso/Si.fcc.6x6x6/: Si.band.in  Si.bands.in  Si.scf.in  input.in
sample/quantum-espresso/SrVO3.sc.6x6x6/: SrVO3.band.in  SrVO3.bands.in  SrVO3.scf.in  input.in
sample/xtapp/: Readme.txt
sample/xtapp/Al.fcc.6x6x6/: Al.1x1x1.vesta  Al.2x2x2.vesta  Al.cg  Al.sh  Al.vb  input.in  ps-Al  ps-Al.ichr  wsh.mpirun.torque-impi  wsh.mpirun.torque-ompi
sample/xtapp/La2CuO4.bct.6x6x6/: La2CuO4.1x1x1.vesta  La2CuO4.2x2x2.vesta  La2CuO4.cg  La2CuO4.sh  La2CuO4.vb  input.in  ps-Cu  ps-La  ps-O  wsh.mpirun.torque-impi  wsh.mpirun.torque-ompi
sample/xtapp/Si.fcc.6x6x6/: Si.1x1x1.vesta  Si.2x2x2.vesta  Si.cg  Si.sh  Si.vb  input.in  ps-Si  ps-Si.ichr  wsh.mpirun.torque-impi  wsh.mpirun.torque-ompi
sample/xtapp/SrVO3.sc.6x6x6/: SrVO3.1x1x1.vesta  SrVO3.2x2x2.vesta  SrVO3.cg  SrVO3.sh  SrVO3.vb  input.in  ps-Sr  ps-Sr.ichr  ps-V  ps-V.ichr  wsh.mpirun.torque-impi  wsh.mpirun.torque-ompi
sample/xtapp/TiO2.ort.6x6x6/: TiO2.cg  TiO2.sh  TiO2.vb  input.in  ps-O.ichr  ps-Ti  ps-Ti.ichr  wsh.mpirun.torque-impi  wsh.mpirun.torque-ompi
sample/xtapp/TiO2.ort.6x6x6/mk_localcoord-and-sc222/: LOG.localcoord  POSCAR  Readme.txt  TiO2.1x1x1.vesta  TiO2.2x2x2.inp  TiO2.2x2x2.vesta  TiO2.inp  fort.100  genvesta  mksupercell.f90
sample/xtapp/TiO2.ort.6x6x6/mklocal/: Readme.txt  mklocal.f90
src/: CMakeLists.txt
src/calc_int/: CMakeLists.txt  Makefile  calc_intJ.F  calc_intW.F  calc_int_sub.F  calc_j3d  calc_w3d  config_j3d.h  config_w3d.h  est_nwx2.f90  fft_3d.mod  inv.F90  m_rdinput.f90  m_rdinput.mod  wrt_model_j3d.f90  wrt_model_w3d.f90  wrt_mvmc_j3d.f90  wrt_mvmc_w3d.f90
src/chiqw/: CMakeLists.txt  Makefile  SO3_to_SU2_rotation.f90  chiqw.F  chiqw_sub.F  config.h  diff.txt  est_NTK.f90  fft_3d.mod  gen_grid.f90  inv.F90  invZGE.F90  m_fft3d_20150826.f90  m_rdinput.f90  m_rdinput.mod  m_tetrahedron.mod  m_tetrahedron_20170325.F  wrt_optical_property.f90
src/gw/: CMakeLists.txt  Makefile  calc_band_disp.f90  calc_gwakw.f90  calc_gwdos.f90  calc_ksdos.f90  config.h  diagV.f90  est_latparam.f90  est_nwx2.f90  gw.f90  input.in  invmat_complex.f90  m_FR.f90  m_band.f90  m_bspline.f90  m_eigenstate.f90  m_qp.f90  m_rd_dat_eps.f90  m_rd_dat_wan.f90  m_rd_dat_wfn.f90  m_rd_input.f90  m_rdinput.f90  m_self.f90  make_kpts.f90  make_sgmw.f90  mpi-compile-debug.csh  mpi-compile.csh  mpi-compile.csh.intel  mpi-compile.csh.openmpi  out.sub  sub_band_disp.f90  sub_det_shift.f90  sub_eigenvalue.f90  sub_eps.f90  sub_gw.f90  sub_gwdos.f90  sub_ksdos.f90  sub_mkidx.f90  sub_sx.f90  (+6 more)
src/transfer_analysis/: CMakeLists.txt  Makefile  config.h  m_band.f90  m_dos.f90  m_eigenstate.f90  m_frmsf.f90  m_rd_dat_zvo.f90  m_rd_transdef.f90  m_tetrahedron_20170325.F  m_truncation.f90  tr.py  transfer_analysis.f90
src/transfer_analysis_mvmc/: config.h  m_dos.f90  m_eigenstate.f90  m_hist.f90  m_rd_transdef.f90  m_truncation.f90  tr.py  transfer_analysis.f90
src/trasfer_analysis_mvmc/: CMakeLists.txt  COMPILE-debug.csh  Makefile  Makefile_still_not_active  calc_dos.f90  calc_hist.f90  config.h  est_ef.f90  est_nkbi.f90  m_band.f90  m_frmsf.f90  m_rd_dat_mvmc.f90  m_rd_dat_zvo.f90  make_eig.f90  make_grd.f90  make_kdata.f90  search_Rmin.f90  sub_eigenvalue.f90  sub_make_eig.f90  sub_mkidx.f90  sub_search_Rmin.f90  tr.py  transfer_analysis.f90  truncation.f90  util.f90  wrt.f90
src/wannier/: CMakeLists.txt  Makefile  SO3_to_SU2_rotation.f90  config.h  det.F90  est_NTK.f90  est_latparam.f90  fft_3d.mod  frmsf_wan.F90  frmsf_wan.mod  gencif.f90  inv.F90  inv_ge_LAPACK.F90  m_SO3_to_SU2_Local.f90  m_bvector.mod  m_bvector_20171208.f90  m_dmx.f90  m_dos.f90  m_eigenstate.f90  m_fat_band.f90  m_frmsf_wan.F90  m_gencif_sub.f90  m_rdinput.f90  m_rdinput.mod  m_self.f90  m_spinvector.f90  m_tetrahedron_20201027.F  m_tetrainteg.F  m_wrt_frmsf.f90  m_wrt_model.f90  m_wrt_mvmc.f90  make_KG0.F  makekpts.f90  wannier.F  wannier_sub.F  wrt_frmsf.f90  wrt_mvmc.f90
to-kawamura/: COMPILE_gen-def-corr.csh  StdFace_main.c  StdFace_vals.h  Wannier90.c  gen-def-corr.f90
util/: CMakeLists.txt  bands_ele.f90  extr_atom_position.sh  wfn_bin2text.F
util/python/: local_axis_finder.py
util/qe2respack/: Makefile  Makefile.20171012  README.txt  extr_atom_pos.sh  qe2respack.f90  qe2respack.py  qe2respack.sh
util/transfer_analysis/: tr.py
util/xtapp2respack/: CMakeLists.txt  COMPILE.wfn2respack.csh  Makefile  strconv.F90  subr_fmtconv.F90  subr_readstr.F90  wfn2respack.F90  xtapp2respack.sh
