cmake_minimum_required(VERSION 2.8)
if(${CMAKE_PROJECT_NAME} STREQUAL "Project")
  message(FATAL_ERROR "cmake should be executed not for 'src' subdirectory, but for the top directory of RESPACK.")
endif(${CMAKE_PROJECT_NAME} STREQUAL "Project")
add_subdirectory(calc_int)
add_subdirectory(wannier)
add_subdirectory(transfer_analysis)
add_subdirectory(chiqw)
add_subdirectory(gw)
